feat: initial homepage layout.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,59 +1,4 @@
-
-  #search-container {
+.center-navbar {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.3);
-    padding: 20px;
-}
-
-#search-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-#search-input {
-    padding: 10px;
-    width: 400px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    margin-bottom: 10px;
-}
-
-#location-input {
-    padding: 10px;
-    width: 400px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    margin-bottom: 10px;
-}
-
-#start-date-input,
-#end-date-input {
-    padding: 10px;
-    width: 200px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    margin-bottom: 10px;
-}
-
-#search-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    background-color: #ff5a5f;
-    color: #fff;
-    cursor: pointer;
-}
-
-#search-button:hover {
-    background-color: #e64045;
-}
+  }
