--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Home Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url("assets/office.jpg");
-            background-color: rgba(0, 0, 0, 0.5);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WorkAnywhere</title>
 
-        }
-    </style>
 </head>
 <body>
-    <div id="search-container">
-        <form id="search-form">
-            <input type="text" id="search-input" name="search" placeholder="Search...">
-            <input type="text" id="location-input" name="location" placeholder="Country, City, or ZIP">
-            <input type="date" id="start-date-input" name="start-date" placeholder="Data inicial">
-            <input type="date" id="end-date-input" name="end-date" placeholder="Data final">
-            <input type="submit" id="search-button" value="Pesquisar">
-        </form>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left: 10px;">
+    <a class="navbar-brand" style="color: black; font-size:28px;" href="#">WorkAnywhere</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse center-navbar" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <div class="input-group mb-1">
+            <input type="text" class="form-control" style="width:350px;" placeholder="Search destinations" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Search</button>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
+  </nav>
+
+  <div class="container mt-3">
+    <h1>Result</h1>
+    <div class="row mt-3">
+      <div class="col-md-3" *ngFor="let item of mockData">
+        <div class="card">
+          <img [src]="item.image" class="card-img-top" [alt]="item.title">
+          <div class="card-body">
+            <h5 class="card-title">{{ item.title }}</h5>
+            <p class="card-text">{{ item.description }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+   
+  </div>
+
 </body>
 </html>
